# Kea_SD22W_System_Integration_2022_Autumn

./: README.md  package-lock.json
0._Miscellaneous/: getgoogehomepage.sh  stripeiframe.html
1._file_types/: me.json  me.xml  me.yaml
11.Web_sockets/: package-lock.json
2._modules/node/: app.js  package-lock.json  package.json
2._modules/node/public/: duck.html  duckFactoryLib.js  motherDuck.js
2._modules/python/: main.py
2._modules/python/libs/: LibraryA.py  LibraryB.py  __init__.py
3._pythonenvironments/poetry/: pyproject.toml
4._date/node/: main.js
5._FastAPI/: main.py  pyproject.toml
5._FastAPI/python/: main.py  pyproject.toml
6._Environment_Variables/node/: package.json
6._Environment_Variables/python/: main.py  pyproject.toml
7.Rest_API_Docs/: app.js  package-lock.json  package.json  users.js
7._REST_API_Docs/express_swagger/: app.js  package.json
7._REST_API_Docs/express_swagger/routers/: users.js
7._REST_API_Docs/fastapi_swagger/: main.py  pyproject.toml
7._REST_API_Docs/java_spring_swagger/: SwaggerConfig.java  about.txt
8.Github_Webhook/: app.js  package-lock.json  package.json
8._webhooks/node_github_webhooks/: app.js  package.json
8._webhooks/python_webhooks/: main.py  pyproject.toml  webhook.py
Dateservers-part1/: package-lock.json  package.json  pyproject.toml  server1.py  server2.js
Dateservers-part1/Fastapi-csv/: me.csv
Python_webhook/: webhook.py
fastapi/: main.py  pyproject.toml
