[tool.poetry]
name = "dateservers-part1"
version = "0.1.0"
description = ""
authors = ["Katerina Komarkova <58290791+kkomarkova@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
