[tool.poetry]
name = "poetryvirtualenv"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
emoji = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
