[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Katerina Komarkova <58290791+kkomarkova@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
