[tool.poetry]
name = "python_webhooks"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
